# calenda-rs

./: COUNTRIES.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  TEMPLATE.md
.github/workflows/: rust.yml
examples/: schedule.rs
src/: calendar.rs  constants.rs  date_rolling.rs  day_counting.rs  daycount.rs  errors.rs  frequency.rs  functions.rs  holiday.rs  lib.rs  schedule.rs  utilities.rs
src/conventions/: date_rolling_conventions.rs  day_counting_conventions.rs  frequency.rs  mod.rs
src/countries/: mod.rs
src/countries/africa/: botswana.rs
src/countries/asia/: china.rs  hong_kong.rs  india.rs  indonesia.rs
src/countries/europe/: austria.rs  czech_republic.rs  denmark.rs  finland.rs  france.rs  germany.rs  hungary.rs  iceland.rs  united_kingdom.rs
src/countries/north_america/: canada.rs  mod.rs  united_states.rs
src/countries/oceania/: australia.rs  new_zealand.rs
src/countries/south_america/: argentina.rs  brazil.rs  chile.rs
